[tool.poetry]
name = "rosstagerl"
version = "0.1.0"
description = "RL experiments on a running instance of ROS Stage"
authors = ["Roberto Cipollone <cipollone.rt@gmail.com>"]
license = "GPL-3.0-or-later"
exclude = [
	"docker/*", ".vimrc",
]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.19.4"
gym = "^0.17.3"

[tool.poetry.dev-dependencies]
ipython = "^7.19.0"
tox = "^3.20.1"
flake8 = "^3.8.4"
pytest = "^6.1.2"
pylint = "^2.6.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
